corrected an image size and some image related CSS
So that images would not be stretched beyond their assigned sizes.

--- a/wp-content/themes/skillcrushstarter-active-theme/style.css
+++ b/wp-content/themes/skillcrushstarter-active-theme/style.css
@@ -377,7 +377,7 @@ font-weight: bold;
 /* Page Styles - addition*/
 
 .page-entry img{
-	width: 100%;
+	max-width: 100%;
 	margin-bottom: 30px;
 }
 section.single-page {
